# mclang2

./: .gitignore  .gitmodules  Cargo.toml  README.md  REF.md  test.mcl
examples/: .gitignore
include/: fs.mcl  int.mcl  io.mcl  std.mcl  string.mcl  types.mcl
include/linux/: io.mcl  linux.mcl  syscalls.mcl
playground/: .gitignore  mclangc  test.mcl
src/: cli.rs  config.rs  constants.rs  lexer.rs  main.rs  parser.rs  precompiler.rs  preprocessor.rs  typechecker.rs  types.rs  util.rs
src/compile/: commands.rs  linux_x86_64.rs  mod.rs
src/compiler/: mod.rs  utils.rs
src/compiler/x86_64_linux_nasm/: mod.rs  utils.rs
src/definitions/: mod.rs
src/interpret/linux_x86_64/: mod.rs
src/lexer/: mod.rs
src/logger/: colors.rs  macros.rs  mod.rs  types.rs
src/parser/: builtin.rs  mod.rs  precompiler.rs  utils.rs
src/types/: common.rs  mod.rs  token.rs
src/types/ast/: mod.rs
src/types/common/: loc.rs  mod.rs
src/types/token/: mod.rs
tools/: .gitignore  build_tools.sh  intcnv.c
